    - Update man page for --broker-url. Explain the syntax of <URL>.
    - Properly handle (=expand) the "~" character in key filenames. (Brought to
      attention by Eldamir on IRC. Thanks!).
    - Expand tilde operator for all other file paths handed over to X2Go Client
      via sessions file or cmdline parameter.
    - Syntax fix of x2goclient.desktop file.
  * Pull-in packaging changes from Debian.
  * debian/source/format:
    + Switch to format 1.0.
  * Ship x2goclient.spec (RPM package definitions) in upstream project. (Thanks
    to the Fedora package maintainers).

  [ Ricardo Díaz Martín ]
  * New upstream versino (4.0.1.2):
    - Strip whitespaces off of user name, host name and other
      strings when loading / saving session profiles.(Fixes: #315).
    - New option --tray-icon. Force showing the tray icon, even for
      hidden sessions. Also allow creation of .desktop files with
      --tray-icon optionally being enabled. (Fixes: #316).
    - Update Spanish translation.

  [ Oleksandr Shneyder ]
  * New upstream version (4.0.1.2):
    - Support for keys "shadowuser" "shadowdisplay" and "shadowmode" in
      config file. This allows choosing the default display for shadow
      sessions.

  [ Heinrich Schuchardt ]
  * New upstream version (4.0.1.2):
    - Handle SSH host key changes more elegantly and allow user interaction
      if such a host key change occurs. (Fixes: #241).

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 11 Sep 2013 12:17:43 +0200

x2goclient (4.0.1.1-0~x2go1) unstable; urgency=low

  [ Nicolai Hansen ]
  * New upstream version (4.0.1.1):
    - Update Danish translation file.

  [ Terje Andersen ]
  * New upstream version (4.0.1.1):
    - Update Norwegian Bokmaal translation file.

  [ Oleksandr Shneyder ]
  * New upstream version (4.0.1.1):
    - Use "127.0.0.1" instead of localhost to avoid wrong IPv6 hostname
      resolution. (Fixes: #151).
    - Wait for x2gocmdexitmessage to return before closing in hidden mode.