@@ -21,6 +21,7 @@ x2goclient (4.0.1.2-0x2go2) UNRELEASED; urgency=low
     - Expand tilde operator for all other file paths handed over to X2Go Client
       via sessions file or cmdline parameter.
     - Syntax fix of x2goclient.desktop file.
+    - Test for various file locations of the pulseaudio cookie file.
   * Pull-in packaging changes from Debian.
   * debian/source/format:
     + Switch to format 1.0.
